force-app/main/default/objects/SIOC__Link__c/SIOC__Link__c.object-meta.xml
<CustomObject>
    <label>Link</label>
    <nameField>
        <displayFormat>LINK-{00000}</displayFormat>
        <label>Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>