force-app/main/default/objects/SIOC__Link__c/fields/SIOC__AppointedOn__c.field-meta.xml
<CustomField>
    <fullName>SIOC__AppointedOn__c</fullName>
    <label>Appointed On</label>
    <type>Date</type>
</CustomField>