force-app/main/default/objects/SIOC__Link__c/fields/SIOC__LinkType__c.field-meta.xml
<CustomField>
    <fullName>SIOC__LinkType__c</fullName>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Person of Significant Control</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>