force-app/main/default/objects/SIOC__Link__c/fields/SIOC__Occupation__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Occupation__c</fullName>
    <label>Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>