force-app/main/default/objects/SIOC__Link__c/fields/SIOC__PersonInfo__c.field-meta.xml
<CustomField>
    <fullName>SIOC__PersonInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Information</label>
    <referenceTo>SIOC__PersonInfo__c</referenceTo>
    <relationshipLabel>Relates to (Person Information)</relationshipLabel>
    <relationshipName>LinksPerson</relationshipName>
    <type>Lookup</type>
</CustomField>