force-app/main/default/objects/SIOC__Link__c/fields/SIOC__Related_To__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Related_To__c</fullName>
    <label>Related To</label>
    <referenceTo>SIOC__CompanyInfo__c</referenceTo>
    <relationshipLabel>Links</relationshipLabel>
    <relationshipName>Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>