force-app/main/default/objects/SIOC__Link__c/fields/SIOC__ResignedOn__c.field-meta.xml
<CustomField>
    <fullName>SIOC__ResignedOn__c</fullName>
    <label>Resigned On</label>
    <type>Date</type>
</CustomField>