force-app/main/default/objects/SIOC__Link__c/fields/SIOC__RoleDesc__c.field-meta.xml
<CustomField>
    <fullName>SIOC__RoleDesc__c</fullName>
    <label>Role Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>