force-app/main/default/objects/SIOC__Link__c/fields/SIOC__VendorLinkDesc__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorLinkDesc__c</fullName>
    <label>Vendor Link Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>